loleaflet/css/oxool.css
/* ... */
.oxool-annotation:not(annotation-active) .oxool-annotation-collapsed{
	position: absolute;
	left: 24px;
}

.oxool-annotation.annotation-active:not(.rtl) .oxool-annotation-collapsed{
	position: absolute;
	left: 0 !important;
}
.oxool-annotation.annotation-active.rtl .oxool-annotation-collapsed{
	position: absolute;
	left: 48px !important;
}

#document-container > .oxool-annotation:hover .oxool-annotation-collapsed{
	box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%), 0 0 10px 4px rgb(0 0 0 / 10%);
	cursor: pointer;
}

.oxool-annotation-content-wrapper, .oxool-annotation-redline-content-wrapper {
	padding: 8px;
	font-family: var(--oxool-font) !important;
	font-size: var(--default-font-size);
	text-align: left;
	background-color: var(--color-background-lighter);
	box-shadow: 0 0 3px var(--color-box-shadow);
	color: var(--color-main-text);
	border: none;
	border-radius: var(--border-radius);
	width: var(--annotation-input-size);
}
.oxool-annotation-content-wrapper:hover, .oxool-annotation-redline-content-wrapper:hover {
	background-color: var(--color-background-dark);
	color: var(--color-text-dark);
}

.annotation-active.modify-annotation-container .oxool-annotation-content-wrapper,
.annotation-active.reply-annotation-container .oxool-annotation-content-wrapper,
.oxool-annotation-collapsed.modalpopup {
	width: var(--annotation-input-size);
}

.oxool-annotation-content {
	margin: 3px;
	line-height: 1.4;
	max-height: var(--annotation-input-size);
	overflow: overlay;
}

/* 註解串數量 */
.oxool-annotation-reply-count-collapsed {
	background-color: var(--color-primary-lighter);
	color: var(--color-primary-text);
	font-weight: bold;
	font-family: var(--oxool-font);
	font-size: 20px;
	border: 1px solid var(--color-primary);
	border-radius: 50%;
	z-index: 10;
	position: absolute;
	width: 24px;
	height: 24px;
	left: 26px;
	top: -10px;
}

#main-document-content {
	z-index: 0;
}

#main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--color-primary));
}

.oxool-annotation-collapsed {
	background: var(--color-background-lighter);
	border-radius: 50%;
	width: 36px;
	height: 36px;
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.annotation-active .oxool-annotation-collapsed {
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup {
	border-radius: 8px !important;
	border: 1px solid var(--color-border) !important;
	background: var(--color-background-lighter) !important;
}

#mobile-wizard-popup {
	background-color: var(--color-background-lighter) !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .lokdialog.ui-dialog-content {
	background-color: transparent !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation {
	margin-bottom: 16px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:last-of-type {
	margin-bottom: 8px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:first-of-type {
	margin-top: 8px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation-content-wrapper {
	box-shadow: none;
	border-width: 0px 0px 1px !important;
	border-bottom: 1px solid var(--color-border) !important;
	border-radius: 0 !important;
	background: var(--color-background-lighter);
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup [id^='comment-container-']:last-child > .oxool-annotation-content-wrapper{
	border-width: 0 !important;
}


.oxool-dont-break {
	/* These are technically the same, but use both */
	overflow-wrap: break-word;
	word-wrap: break-word;

	/* Don't eat new lines  */
	white-space: pre-wrap;

	/* Adds a hyphen where the word breaks, if supported (No Blink) */
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	-webkit-hyphens: auto;
	hyphens: auto;
}

.oxool-annotation-content-author {
	margin: 0;
	margin-top: 2px;
	height: 18px;
}

.oxool-annotation-content-resolved {
	color: var(--color-success);
}

.oxool-annotation-edit {
	margin: 3px;
	line-height: 1.4;
}

.oxool-annotation-textarea {
	font-family: var(--oxool-font) !important;
	font-size: var(--default-font-size);
	border: 1px solid var(--color-border);
	background-color: var(--color-background-dark);
	overflow-x: hidden;
	height: 50px;
	width: 100%;
	box-sizing: border-box;
}

#new-mobile-comment-input-area.oxool-annotation-textarea {
	height: var(--annotation-input-size);
}

.oxool-div-layer {
	position: absolute;
	left: 0;
	top: 0;
}

.oxool-annotation-table {
	border-spacing: 0;
	border-collapse: separate;
	white-space: nowrap;
	width: 100%;
}

.oxool-annotation-img {
	box-sizing: content-box !important;
	max-width: 32px;
	display: inline-block;
	border: solid 2px;
	border-radius: 50%;
	height: 32px;
	width: 32px;
	padding: 0;
}
.oxool-annotation-img .avatar-img{
	border: none;
}
.oxool-annotation-img > .avatar-img{
	display: block;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 32px; /* Width of new image */
	height: 32px; /* Height of new image */
	background: url('images/user.svg') center 3px no-repeat;
}

.leaflet-container .leaflet-pane.leaflet-calc-background-pane {
	z-index: 0;
}

.avatar-img {
	border: solid 2px;
	border-radius: 50%;
}

.user-info {
	border-radius: 50%;
	width: 24px;
	height: 24px;
	overflow: auto;
	margin: auto;
}

.oxool-annotation-author {
	padding-left: 10px;
	padding-right: 10px;
	vertical-align: top;
	display: table-cell;
	width: 100%;
	overflow: hidden;
	max-width: 110px;
}

.oxool-annotation-menu, .oxool-annotation-menu-redline, .oxool-redline-accept-button, .oxool-redline-reject-button {
	margin: 0;
	padding: 0;
	width: 24px;
	height: 24px;
	vertical-align: top;
	border: 1px solid transparent;
	display: inline-block;
}

.oxool-redline-accept-button {
	background: url('images/cmd/accepttrackedchanges.svg') no-repeat center !important;
}
/* ... */

